phew, calendar view ready

--- a/src/app/extensions/package.json
+++ b/src/app/extensions/package.json
@@ -4,6 +4,8 @@
   "license": "MIT",
   "dependencies": {
     "@hubspot/ui-extensions": "latest",
+    "date-fns": "^2.30.0",
+    "eslint": "^8.55.0",
     "react": "^18.2.0"
   }
 }
