--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "postinstall": "cd ./src/app/extensions/ && npm install && cd ../app.functions && npm install"
   },
   "author": "HubSpot",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2"
+  }
 }
