sidebar & tab share

--- a/src/app/app.json
+++ b/src/app/app.json
@@ -14,7 +14,10 @@
     "crm": {
       "cards": [
         {
-          "file": "extensions/dec-2.json"
+          "file": "extensions/adventstart-tab.json"
+        },
+        {
+          "file": "extensions/adventstart-sidebar.json"
         }
       ]
     }
