basic product line items card added

--- a/src/app/app.json
+++ b/src/app/app.json
@@ -14,7 +14,7 @@
     "crm": {
       "cards": [
         {
-          "file": "extensions/SimplePanel.json"
+          "file": "extensions/products.json"
         }
       ]
     }
