checkbox strikethrough effect

--- a/src/app/app.json
+++ b/src/app/app.json
@@ -27,6 +27,9 @@
         },
         {
           "file": "extensions/shuttle-bus-quotes.json"
+        },
+        {
+          "file": "extensions/BasicExtension.json"
         }
       ]
     }
