--- a/src/app/app.functions/package.json
+++ b/src/app/app.functions/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@hubspot/api-client": "^9.1.1",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "asana": "^1.0.0"
   }
 }
