Task creation works, close panel pending

--- a/src/app/app.json
+++ b/src/app/app.json
@@ -13,7 +13,10 @@
     "collector.graphql_query.execute",
     "crm.objects.companies.read",
     "crm.objects.custom.read",
-    "crm.objects.custom.write"
+    "crm.objects.custom.write",
+    "crm.objects.contacts.read",
+    "crm.objects.contacts.write",
+    "crm.schemas.contacts.read"
   ],
   "public": false,
   "extensions": {
